@@ -46,7 +46,7 @@ jsonrpc = localhost:8000
 
 # Configure the path of the files for the pid and the logs
 #pidfile = False
-#logfile = False
+#logconf = False
 
 #privatekey = server.pem
 #certificate = server.pem
